-- including of ExtJS would shift top menu bar - fixed

--- a/www/style/style.saltnpepper.css
+++ b/www/style/style.saltnpepper.css
@@ -296,10 +296,9 @@ background-position: 0px -10px;
 }
 
 #main {
-   position: relative;
-
+	position: relative;
+	-moz-box-sizing: content-box;
 }
-
 
 #main_portrait_and_username {
 	position: absolute;
@@ -881,7 +880,7 @@ a   span  {float:none;}
 
 .fullwidth-list .component table td {
 	padding: 0px 2px 0px 2px;
-	vertical-align: middle;
+	vertical-align: top;
 }
 
 .fullwidth-list .component table.month_header td {
@@ -1609,4 +1608,6 @@ div.xowiki-content hr {
 .calendar_table {
 	width: auto;
 }
+
+
 
